# AgentCell

./: .env.example  .gitignore  AGENTS.md  README.md  agentcell.toml  alembic.ini  pyproject.toml
docs/: agents.md  api-cli.md  approval-recovery.md  development-steps.md  handoff.md  memory-context-artifacts.md  production-tools.md  provider-engineering.md  technology-stack.md  tool-security.md
migrations/: README.md  env.py
migrations/versions/: 20260710_0001_create_runs_and_events.py  20260713_0002_add_approvals_checkpoints.py  20260713_0003_add_memory_artifacts.py  20260713_0004_add_agent_delegations.py  20260713_0005_add_agents.py  20260714_0006_add_conversations.py  20260714_0007_add_file_changes.py  20260715_0008_add_run_execution_identity.py  20260715_0009_bind_conversation_model.py  20260716_0010_add_conversation_routing.py
src/agentcell/: README.md  __init__.py  application.py  config.py  display.py  errors.py
tests/: README.md
tests/integration/: conftest.py  test_agent_delegation.py  test_api.py  test_approval_recovery.py  test_artifact_store.py  test_cli.py  test_context_management.py  test_conversations.py  test_database.py  test_event_store.py  test_file_changes.py  test_handoff.py  test_memory_service.py  test_migrations.py  test_production_tools.py  test_repositories.py  test_run_display_restart.py  test_run_service.py  test_task_routing.py  test_tool_execution_ledger.py  test_workspace_tools.py
tests/provider_contract/: conftest.py  test_adapters.py  test_fake_provider.py  test_live_providers.py
tests/replay/: conftest.py  (+1 more)
web/: README.md
(+115 files in other folders)
