[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agentcell"
version = "0.1.0"
description = "Local-first, event-sourced agent runtime"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "AgentCell contributors" }]
dependencies = [
    "aiosqlite>=0.20,<1",
    "alembic>=1,<2",
    "httpx>=0.28,<1",
    "pydantic>=2,<3",
    "pydantic-ai-slim[openai]>=2.8,<3",
    "pydantic-settings>=2.14,<3",
    "rich>=14,<15",
    "sqlalchemy>=2,<3",
    "typer>=0.16,<1",
]

[project.scripts]
agentcell = "agentcell.cli.app:main"

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentcell"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.format]
quote-style = "double"
